# pymetastore

./: .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
pymetastore/: htypes.py  metastore.py  stats.py  types.py
pymetastore/hms/: ThriftHiveMetastore-remote
tests/: test_htypes.py
tests/integration/: test_metastore.py
tests/unit/: test_htypes.py
